# Icarus-Quant-Portfolio-Research-Pipeline

./: .gitignore  ProjectIcarusBrief.md  README.md  app.py  pyproject.toml  requirements.txt  run_pipeline.py
src/: alpha_model.py  backtest_loop.py  data_pipeline.py  evaluation.py  factors.py  optimizer.py  risk_model.py  universe.py
tests/: conftest.py  test_alpha_model.py  test_backtest_loop.py  test_data_pipeline.py  test_evaluation.py  test_factors.py  test_optimizer.py  test_risk_model.py  test_universe.py
